<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingEnd="10dp"
    tools:context=".InternalActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundTop"
        android:paddingBottom="10dp"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backInternal"
            android:src="@drawable/arrow"
            android:background="@android:color/transparent"
            android:paddingStart="10dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Beasiswa Internal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="40dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/beasiswa_internal_judul" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:text="Beasiswa"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/del" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="2sp"
            android:paddingStart="0dp"
            android:text="Prestasi"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/orange" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:textColor="@color/black"
        android:text="Beasiswa prestasi diberikan kepada mahasiswa dalam
                        bentuk potongan SPP dengan aturan sebagai berikut:"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/dot"
                android:layout_marginStart="25dp"
                android:paddingTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Point1"
                android:paddingTop="20dp"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/dot"
                android:layout_marginStart="25dp"
                android:paddingTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Point2"
                android:paddingTop="20dp"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:background="@color/bgTable"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp">

            <!-- Table Header -->
            <TableRow
                android:background="@color/del">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NR Per Semester"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:background="@color/backgroundTop"
                    android:foreground="?android:attr/listDivider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Potongan SPP"
                    android:textAlignment="center"
                    android:background="@color/backgroundTop"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:foreground="?android:attr/listDivider"/>

            </TableRow>

            <!-- Table Rows -->
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.00"
                    android:textAlignment="center"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100%"
                    android:textAlignment="center"
                    android:padding="10dp" />

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3.75 - 3.99"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:foreground="?android:attr/listDivider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50 %"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:foreground="?android:attr/listDivider"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3.50 - 3.74"
                    android:textAlignment="center"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25%"
                    android:textAlignment="center"
                    android:padding="10dp" />

            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/dot"
                android:layout_marginStart="25dp"
                android:paddingTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Point3"
                android:paddingTop="20dp"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/dot"
                android:layout_marginStart="25dp"
                android:paddingTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Point4"
                android:paddingTop="20dp"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/dot"
                android:layout_marginStart="25dp"
                android:paddingTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Point5"
                android:paddingTop="20dp"
                android:layout_marginStart="7dp"
                android:textColor="@color/black"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
